--- a/hooks-practice/package.json
+++ b/hooks-practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-comp",
+  "name": "hooks-practice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.1",
     "@tailwindcss/vite": "^4.1.3",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
